--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,8 +17,10 @@
           </td>
           <td><%= link_to @books.title, book_path(@books) %></td>
           <td><%= @books.body %></td>
+          <% if @user_book.id == current_user.id %>
           <td><%= link_to 'Edit', edit_book_path(@books), class: "btn btn-sm btn-success edit_book_#{@books.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@books), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@books.id}"%></td>
+          <% end %>
         </tr>
       </table>
     </div>
